Fix body collapse

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,13 @@
 body {
   margin: 0;
   background-color: var(--background-color);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body main {
+  flex-grow: 1;
 }
 
 mark {
